--- a/WebContent/admin/pedido/components/panelPedidos.xhtml
+++ b/WebContent/admin/pedido/components/panelPedidos.xhtml
@@ -5,26 +5,27 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui" xml:lang="pt-BR" lang="pt-BR"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-
-<p:panel id="panelPedidos">
-	<p:dataTable value="#{carrinhoMB.pedido.pedidoProdutos}" var="p">
-		<p:column headerText="Produto">
-			<h:outputLabel value="Meia " rendered="#{p.produtos.meia eq 'true'}" />
-			<h:outputText value="#{p.produtos.descricao}" />
-			<h:outputLabel value=" e Meia "
-				rendered="#{p.produtosMeia.meia eq 'true'}" />
-			<h:outputText value="#{p.produtosMeia.descricao}"
-				rendered="#{p.produtosMeia.meia  eq 'true'}" />
-		</p:column>
-		<p:column headerText="Valor">
-			<h:outputText value="#{p.produtos.preco}" />
-		</p:column>
-		<p:column headerText="Ação">
-			<h:commandLink action="#{carrinhoMB.remove(p)}" value=" remove " />
-		</p:column>
-	</p:dataTable>
-	Total do pedido:
-	<p:outputLabel value="#{carrinhoMB.pedido.totalPedido}" />
+	
+	<p:panel header="Pedido" id="panelPedidos" style="width:100%;">
+		<p:dataTable style="width:100%;"  value="#{panelPedidosMB.pedido.pedidoProdutos}" var="p">
+			<p:column headerText="Produto">
+				<h:outputLabel value="Meia " rendered="#{p.produtos.meia eq 'true'}" />
+				<h:outputText value="#{p.produtos.descricao}" />
+				<h:outputLabel value=" e Meia "
+					rendered="#{p.produtosMeia.meia eq 'true'}" />
+				<h:outputText value="#{p.produtosMeia.descricao}"
+					rendered="#{p.produtosMeia.meia  eq 'true'}" />
+			</p:column>
+			<p:column headerText="Valor">
+				<h:outputText value="#{p.produtos.preco}" />
+			</p:column>
+			<p:column headerText="Ação">
+				<h:commandLink  update="panelPedidos"  value=" remove " >
+					<p:ajax event="click" listener="#{panelPedidosMB.remove(p)}" ajax="true" immediate="true" ></p:ajax>
+				</h:commandLink>
+			</p:column>
+		</p:dataTable>
+		Total do pedido:
+	<p:outputLabel value="#{panelPedidosMB.pedido.totalPedido}" />
 </p:panel>
-
 </html>
