--- a/WebContent/admin/pedido/components/selecionarEndereco.xhtml
+++ b/WebContent/admin/pedido/components/selecionarEndereco.xhtml
@@ -5,43 +5,67 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui" xml:lang="pt-BR" lang="pt-BR"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-	<h:panelGroup id="panelSelecionarEndereco">
-		<p:panel header="Dados Cliente" rendered="#{!empty selecionarEnderecoMB.cliente}" >
-				<h:messages />
+<h:panelGroup id="panelSelecionarEndereco">
+	<p:panel header="Dados Cliente"
+		rendered="#{!empty selecionarEnderecoMB.cliente}">
+		<h:column>
+			<h:messages />
+			<h:panelGrid columns="2">
+				<h:outputText value="Nome: " />
+				<p:inputText value="#{selecionarEnderecoMB.cliente.nome}"
+					readonly="true" />
+				<h:outputText value="Email: " />
+				<p:inputText value="#{selecionarEnderecoMB.cliente.email}"
+					readonly="true" />
+			</h:panelGrid>
+
+			<ui:repeat var="telefone"
+				value="#{selecionarEnderecoMB.cliente.listaTelefones}">
 				<h:panelGrid columns="2">
-					<h:outputText value="Nome: "/>
-					<p:inputText  value="#{selecionarEnderecoMB.cliente.nome}" readonly="true"/>
-					<h:outputText value="Email: " />
-					<p:inputText value="#{selecionarEnderecoMB.cliente.email}" readonly="true"/>
+					<h:outputLabel value="Telefone: " />
+					<p:inputText readonly="true" value="#{telefone.numero}" />
 				</h:panelGrid>
-				<ui:repeat var="telefone" value="#{selecionarEnderecoMB.cliente.listaTelefones}">
-					<h:panelGrid columns="2">
-						<h:outputLabel value="Telefone: " />
-						<p:inputText readonly="true" value="#{telefone.numero}" />
-					</h:panelGrid>
-				</ui:repeat>
-				<p:outputPanel id="selecionarEndereco">
-					<p:selectOneRadio id="customRadio" value="#{selecionarEnderecoMB.enderecoSelecionado}" layout="custom">
-						<f:selectItems value="#{selecionarEnderecoMB.cliente.enderecos}" var="endereco"  >
-						</f:selectItems>
-							 <p:ajax event="change" process="@this" update=":principal:customRadio" />
-					</p:selectOneRadio>
-					<h:panelGrid columns="4">
-						<ui:repeat var="endereco" varStatus="status" value="#{selecionarEnderecoMB.cliente.enderecos}">
-							<p:panel>
-								<p:radioButton for=":principal:customRadio" itemIndex="#{status.index}"/>
+			</ui:repeat>
+			<p:outputPanel id="selecionarEndereco">
+				<p:selectOneRadio id="customRadio"
+					value="#{selecionarEnderecoMB.enderecoSelecionado}" layout="custom">
+					<f:selectItems value="#{selecionarEnderecoMB.cliente.enderecos}"
+						var="endereco">
+					</f:selectItems>
+					<p:ajax event="change" process="@this"
+						update=":principal:customRadio" />
+				</p:selectOneRadio>
+				<h:panelGrid columns="4">
+					<ui:repeat var="endereco" varStatus="status"
+						value="#{selecionarEnderecoMB.cliente.enderecos}">
+						<p:panel>
+							<p:radioButton for=":principal:customRadio"
+								itemIndex="#{status.index}" />
 								CEP: #{endereco.cep}
 								DESCRICAO: #{endereco.descricao}
 							</p:panel>
-						</ui:repeat>
-					</h:panelGrid>
-				</p:outputPanel>
-				
-				<p:commandButton immediate="true" value="+ 1 Endereço" actionListener="#{selecionarEnderecoMB.abrirModalCadastroEndereco()}"/>
-		</p:panel>
-	</h:panelGroup>
-	<p:dialog id="modalInclusaoEndereco" header="Inclusão Endereco" widgetVar="modalInclusaoEndereco" modal="true" > 
-	    <ui:include src="/admin/endereco/cadastrarEndereco.xhtml" />
-	</p:dialog> 
+					</ui:repeat>
+				</h:panelGrid>
+			</p:outputPanel>
+
+			<p:commandButton immediate="true" value="+ 1 Endereço"
+				actionListener="#{selecionarEnderecoMB.abrirModalCadastroEndereco()}" />
+		</h:column>
+		<h:column>
+			<h:panelGroup id="historico">
+				<p:commandButton onclick="historicoCliente.show()"
+					value="Ver historico de pedidos dos cliente" immediate="true" />
+				<p:dialog header="Histórico" widgetVar="historicoCliente"
+					modal="true">
+					<ui:include src="/admin/pedido/historicoPedido.xhtml" />
+				</p:dialog>
+			</h:panelGroup>
+		</h:column>
+	</p:panel>
+</h:panelGroup>
+<p:dialog id="modalInclusaoEndereco" header="Inclusão Endereco"
+	widgetVar="modalInclusaoEndereco" modal="true">
+	<ui:include src="/admin/endereco/cadastrarEndereco.xhtml" />
+</p:dialog>
 </html>
 
