--- a/WebContent/admin/pedido/components/buscaClientePorTelefone.xhtml
+++ b/WebContent/admin/pedido/components/buscaClientePorTelefone.xhtml
@@ -27,6 +27,9 @@
 		<p:dialog header="Seleção de mesas" widgetVar="modalSelecionaMesa" modal="true" > 
 		    <ui:include src="/admin/mesaLoja/selecionaMesa.xhtml" />
 		</p:dialog> 
+		
+		 <ui:include src="/admin/pedido/components/mesasSelecionadas.xhtml" />
+		
 	</h:panelGroup>
 
 
