--- a/WebContent/admin/pedido/components/panelPedidos.xhtml
+++ b/WebContent/admin/pedido/components/panelPedidos.xhtml
@@ -40,6 +40,13 @@
 	<p:dialog id="modalTroco" header="Informar troco" widgetVar="modalTroco" modal="true" > 
 	    <ui:include src="/admin/pedido/modalTroco.xhtml" />
 	</p:dialog> 
+	<p:dialog id="modalPago" header="Relalizou o pagamento" widgetVar="modalPago" modal="true" > 
+	    <ui:include src="/admin/pedido/modalPago.xhtml" />
+	</p:dialog> 
+	<p:dialog id="modalFinal" header="Pedido realizado" widgetVar="modalFinal" modal="true" > 
+	    <ui:include src="/admin/pedido/modalFinal.xhtml" />
+	</p:dialog> 
+	
 	
 	
 	
